<resources>
    <string name="app_name">File Recovery</string>
    <string name="tap_to_start_scanning">Tap to start scanning</string>
    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="recovered_file">Recovered Files</string>
    <string name="setting">Settings</string>
    <string name="photo">Photos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ads_space">Ads space</string>
    <string name="app_need_the_storage_permission_to_provide_necessary_services">App requires the storage permission to provide necessary services.</string>
    <string name="app_need_the_manage_storage_permission_to_provide_necessary_services">App requires the Manage storage permission for provide necessary services.</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="suggestion">Suggestion</string>
    <string name="share">Share</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--For add respected link-->
    <string name="url_privacy_policy">https://recover-deleted-photos-videos.blogspot.com/2023/10/privacy-policy.html</string>
    <string name="email">xyz@gmail.com</string>
    <string name="file_recovering">File recovering...</string>
    <string name="recovered_photos_details">Recovered Photos details</string>
    <string name="rate_us">Rate Us</string>
    <string name="are_you_sure_want_to_exit_app">Are you sure want to exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="exit_app">Exit App</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="file_recovery_all_recovery_requires_full_access_to_your_device_storage_to_search_for_lost_or_deleted_files">File Recovery - All Recovery requires full access to your device storage to search for lost or deleted files.</string>
    <string name="allow">ALLOW</string>
    <string name="permission_is_required_to_access_all_files">Permission is required to access all files</string>
    <string name="we_will_never_share_upload_or_send_your_data_without_your_permission">We will never share, upload, or send your data without your permission.</string>

</resources>