<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/_24sdp"
    android:paddingVertical="@dimen/_18sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/permissions_required"
        android:textColor="@color/headerColor"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPermissionMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/app_need_the_storage_permission_to_provide_necessary_services"
        android:textColor="@color/headerColor"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGoToSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:foreground="@drawable/ripple_circle"
        android:padding="@dimen/_6sdp"
        android:text="@string/go_to_settings"
        android:textAllCaps="true"
        android:textColor="@color/color_blue_100"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvPermissionMsg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:foreground="@drawable/ripple_circle"
        android:id="@+id/tvClose"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/close"
        android:layout_marginTop="@dimen/_12sdp"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvGoToSetting" />



</androidx.constraintlayout.widget.ConstraintLayout>