<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:ellipsize="middle"
        android:fontFamily="@font/nunito_semi_bold"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/exit_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:ellipsize="middle"
        android:fontFamily="@font/nunito_semi_bold"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/are_you_sure_want_to_exit_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/nunito_medium"
        app:cornerRadius="200dp"
        app:rippleColor="@color/highlightColor"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        app:rippleColor="@color/highlightColor"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_medium"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnYes"
        app:layout_constraintEnd_toStartOf="@+id/btnYes"
        app:layout_constraintTop_toTopOf="@+id/btnYes" />

</androidx.constraintlayout.widget.ConstraintLayout>